Bug #8226 Cannot connect via shared memory
Submitted: 1 Feb 2005 1:42 Modified: 31 Mar 2005 6:13
Reporter: Lachlan Mulcahy
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.1.9 OS:Microsoft Windows (Win32)
Assigned to: Konstantin Osipov Target Version:

[1 Feb 2005 1:42] Lachlan Mulcahy
Description:
A simple setup for using memory as a way to connect to the server in Windows fails. See
how to repeat:

How to repeat:
.
C:\mysql-4.1\my.ini
##### my.ini #####
[client]
protocol=memory
shared-memory-base-name=MySQL

[mysqld]
shared-memory
shared-memory-base-name=MySQL

2.
C:\mysql-4.1\bin\mysqld --install MySQL --defaults-file=C:\mysql-4.1\my.ini

3.
Running MySQL on Windows Service.

4.
C:\mysql-4.1\bin\mysql --defaults-file=C:\mysql-4.1\my.ini
---> ERROR 2038 (HY000): Can't open shared memory; client could not create request event
(5)

At this point there is no way to connect to the server, so it can't be stopped with
mysqladmin and must be killed with End Process in Task Manager.

Suggested fix:
None.
[12 Feb 2005 1:43] Konstantin Osipov
What is the server's output?
Was shared memory created successfully (if it wasn't, there must a warning in the log).
[17 Feb 2005 12:34] Konstantin Osipov
Subject: bk commit - 4.1 tree (konstantin:1.2180) BUG#8226

ChangeSet
  1.2180 05/02/17 14:28:50 konstantin@mysql.com +6 -0
  A fix for Bug#8226 "Cannot connect via shared memory":
  provide created shared memory objects with proper
  access rights to make them usable when client and server
  are running under different accounts.
[25 Mar 2005 22:47] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/23383
[25 Mar 2005 23:25] Konstantin Osipov
Fixed in 4.1 tree, currently tagged 4.1.11
[31 Mar 2005 6:13] Paul DuBois
Noted in 4.1.11 changelog.